--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"PriviteServerr.aternos.me",
+	"ip":"Herobrine.org",
 	"port": "25565",
-	"name": "24/7BOT",
+	"name": "Haayukkk",
 	"auto-night-skip":"false"
 }
