--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"Herobrine.org",
-	"port": "25565",
-	"name": "Haayukkk",
+	"ip":"InovX.Shock-SRV.com",
+	"port": "53344",
+	"name": "supguys",
 	"auto-night-skip":"false"
 }
