--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"inovx.ddns.net:53344",
+	"ip":"BOGORPRIDE31.aternos.me
 	"port": "25565",
 	"name": "supguys",
 	"auto-night-skip":"false"
