--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"BOGORPRIDE31.aternos.me
+	"ip":"BOGORPRIDE31.aternos.me"
 	"port": "50218",
 	"name": "supguys",
 	"auto-night-skip":"false"
