--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"BOGORPRIDE31.aternos.me"
-	"port": "50218",
-	"name": "supguys",
+	"ip":"ServerMC8G.aternos.me"
+	"port": "54745",
+	"name": "BotAternos",
 	"auto-night-skip":"false"
 }
